--- a/Baha'i/Others/ROB/V4/p011-032Ch02.html
+++ b/Baha'i/Others/ROB/V4/p011-032Ch02.html
@@ -140,7 +140,7 @@
 	   * For example, see vol. 1, p. <a href="../V1/p228-245Ch14.html#p242">242</a>, and vol. 3, pp. <a href="../V3/p221-252Ch11.html#p223">223</a>-4.<p>
 	   † see below, <a href="p050-072Ch04.html">ch. 4</a>.<p>
 	   <hr>
-	   5. <i>Tablets of Bahá'u'lláh</i>, pp. 121-2.
+	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para111">p. 37</a>, <a href="../../../Baha/TOB/p001-270TOB.html#para339">pp. 121</a>-2.
 	   </small></td>
 </tr>
 <tr>
@@ -158,9 +158,9 @@
        <td VALIGN=top><small><center><a name="p18">18</a></center><p>
 	   <hr>
 	   6. <i>Má'idiy-i-Ásamání</i>, vol. 4, p. 25. This English translation is published in <i>Trustworthiness</i>, compilation by the Research Department of the Universal House of Justice, p. 3, no. 12.<p>
-	   7. <i>Tablets of Bahá'u'lláh</i>, p.37.<p>
-	   8. <i>ibid</i>, pp. 120-21.<p>
-	   9. <i>ibid</i>. p. 121.
+	   7. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para108">p. 37</a>.<p>
+	   8. <i>ibid</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para335">pp. 120</a>-21.<p>
+	   9. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para338">p. 121</a>.
 	   </small></td>
 </tr>
 
@@ -336,7 +336,7 @@
 	   * see vol. 2, pp. <a href="../V2/p065-106Ch04.html#p94">94</a>-6.<p>
 	   † For a brief story of her life see <i>Bahá'í World</i>, vol. VIII, pp. 631-42.<p>
 	   <hr>
-	   15. <i>Tablets of Bahá'u'lláh</i>, p. 63.
+	   15. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para182">p. 63</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../2/p065-106Ch04.html#p95">p. 95</a>
 	   </small></td>
 </tr>
 <tr>
