--- a/Baha'i/Others/ROB/V4/p033-049Ch03.html
+++ b/Baha'i/Others/ROB/V4/p033-049Ch03.html
@@ -41,7 +41,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p33">33</a></center><p>
 	   * For his life see vol. 1, pp. <a href="../V1/p084-095Ch07.html#p91">91</a>-5, and vol. 2, pp. <a href="../V2/p029-054Ch02.html#p42">42</a>-3, <a href="../V2/p337-369Ch16.html#p341">341</a>-6.<p>
-	   † This Tablet has been translated into English in its entirety and is published in <i>Tablets of Bahá'u'lláh</i>, pp. 137-52.
+	   † This Tablet has been translated into English in its entirety and is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para384">pp. 137</a>-52.
 	   </small></td>
 </tr>
 <tr>
@@ -60,7 +60,7 @@
        <td VALIGN=top><small><center><a name="p34">34</a></center><p>
 	   <hr>
 	   1. <i>Memorials of the Faithful</i>, pp. 4-5.<p>
-	   2. <i>Tablets of Bahá'u'lláh</i>, pp. 137-8.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para389">pp. 137</a>-8.
 	   </small></td>
 </tr>
 <tr>
@@ -74,7 +74,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p35">35</a></center><p>
 	   <hr>
-	   3. <i>Tablets of Bahá'u'lláh</i>, p. 138.<p>
+	   3. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para390">p. 138</a>.<p>
 	   4. <i>Áthár-i-Qalam-i-A'lá</i>, vol. 5, pp. 110-11.
 	   </small></td>
 </tr>
@@ -107,7 +107,7 @@
        <td VALIGN=top><small><center><a name="p37">37</a></center><p>
 	   <hr>
 	   6. Unpublished compilation, National Archives Committee no. 38, p. 251.<p>
-	   7. <i>Tablets of Bahá'u'lláh</i>, pp. 138-9.
+	   7. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para390">pp. 138</a>-9.
 	   </small></td>
 </tr>
 <tr>
@@ -125,8 +125,8 @@
 	   * vol. 2, p. <a href="../V2/p236-269Ch11.html#p265">265</a>.<p>
 	   <hr>
 	   8. Letter dated 4 November 1931.<p>
-	   9. <i>Tablets of Bahá'u'lláh</i>, pp. 139-40.<p>
-	   10. <i>ibid</i>.
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para393">pp. 139</a>-40.<p>
+	   10. <a href="../../../Baha/TOB/p001-270TOB.html#para393"><i>ibid</i></a>.
 	   <hr>
 	   [the 'learned in Bahá'] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para173">&para;173</a>
 
@@ -146,7 +146,7 @@
 	   † When in Baghdád, Bahá'u'lláh instructed 'Abdu'l-Bahá, who was then in His teens, to write a commentary on the above Islámic tradition. 'Abdu'l-Bahá's detailed commentary was so profound and illuminating that it aroused the admiration of men of knowledge and erudition. For further information see vol. 2, p. <a href="../V2/p388-396Ch18.html#p390">390</a>.<p>
 	   <hr>
 	   11. <i>Áthár-i-Qalam-i-A'lá</i>, vol. 7, p. 113.<p>
-	   12. <i>Tablets of Bahá'u'lláh</i>, p. 140.
+	   12. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para394">p. 140</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -179,7 +179,7 @@
 	   13. <i>Some Answered Questions</i>, ch. 80, p. 280.<p>
 	   14. <i>ibid</i>. p. 281.<p>
 	   15. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#LXXXI">LXXXI</a>, p. 157.<p>
-	   16. <i>Tablets of Bahá'u'lláh</i>, p. 140.
+	   16. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para395">p. 140</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -193,7 +193,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p42">42</a></center><p>
 	   <hr>
-	   17. <i>Tablets of Bahá'u'lláh</i>, p. 140.<p>
+	   17. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para395">p. 140</a>.<p>
 	   18. Readers are referred to a scholarly article in Persian by Dr Vahíd Ra'fatí, published in <i>'Andalíb</i>, no. 19.<p>
 	   19. <i>Má'idiy-i-Ásamání</i>, vol. 4, p. 24.
 	   </small></td>
@@ -218,7 +218,7 @@
 	   <hr>
 	   20. John 1:1.<p>
 	   21. Isaiah 55:10-11.<p>
-	   22. <i>Tablets of Bahá'u'lláh</i>, p. 141.
+	   22. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para398">p. 141</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -232,7 +232,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p44">44</a></center><p>
-	   23. <i>Tablets of Bahá'u'lláh</i>, pp. 140-41.
+	   23. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para396">pp. 140</a>-41.
 	   </small></td>
 </tr>
 <tr>
@@ -247,7 +247,7 @@
        <td VALIGN=top><small><center><a name="p45">45</a></center><p>
 	   <hr>
 	   24. <i>Some Answered Questions</i>, ch. 53, p. 203.<p>
-	   25. <i>Tablets of Bahá'u'lláh</i>, p. 142.
+	   25. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para400">p. 142</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -293,7 +293,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p48">48</a></center><p>
 	   <hr>
-	   29. <i>Tablets of Bahá'u'lláh</i>, pp. 148-9.
+	   29. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para420">pp. 148</a>-9.
+	   <hr>
+	   ["Thou knowest full well..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p368-390Ch24.html#p373">p. 373</a>
 	   </small></td>
 </tr>
 <tr>
@@ -304,7 +306,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p49">49</a></center><p>
 	   <hr>
-	   30. <i>Tablets of Bahá'u'lláh</i>, p. 143.
+	   30. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para406">p. 143</a>.
 	   </small></td>
 </tr>
 </table>
