--- a/Baha'i/Others/ROB/V4/p050-072Ch04.html
+++ b/Baha'i/Others/ROB/V4/p050-072Ch04.html
@@ -346,7 +346,7 @@
        <td VALIGN=top><small><center><a name="p69">69</a></center><p>
 	   <hr>
 	   15. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para5">p. 2</a>.<p>
-	   16. <i>Tablets of Bahá'u'lláh</i>, p. 219.<p>
+	   16. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para590">p. 219</a>.<p>
 	   17. <i>Áthár-i-Qalam-i-A'lá</i>, vol. 2, pp. 48-9.
 	   </small></td>
 </tr>
@@ -389,7 +389,7 @@
        <td VALIGN=top><small><center><a name="p72">72</a></center><p>
 	   <hr>
 	   20. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#LXI">LXI</a>.<p>
-	   21. <i>Tablets of Bahá'u'lláh</i>, p. 84.
+	   21. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para254">p. 84</a>.
 	   </small></td>
 </tr>
 </table>
