--- a/Baha'i/Others/ROB/V4/p091-102Ch06.html
+++ b/Baha'i/Others/ROB/V4/p091-102Ch06.html
@@ -45,7 +45,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p91">91</a></center><p>
-	   * Translated into English and published in <i>Tablets of Bahá'u'lláh</i>, pp. 205-16.<p>
+	   * Translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#p203">pp. 205</a>-16.<p>
 	   † Fátimih, daughter of the Prophet Muhammad, the holiest woman in Islám.<p>
 	   ‡ The Angel which appeared to Muhammad as the embodiment of the Holy Spirit.
 	   </small></td>
@@ -62,12 +62,12 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p92">92</a></center><p>
 	   <hr>
-	   1. <i>Tablets of Bahá'u'lláh</i>, p. 207.<p>
-	   2. <i>ibid</i>. p. 205.<p>
-	   3. <i>ibid</i>. p. 207.
+	   1. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para575">p. 207</a>.<p>
+	   2. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para574">p. 205</a>.<p>
+	   3. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para576">p. 207</a>.
 	   <hr>
 	   [Hadst thou realized that...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para133">p. 80</a><p>
-	   [O thou who hast gone astray!...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para135">p. 80</a><p>
+	   [O thou who hast gone astray!...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para135">p. 82</a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -92,11 +92,11 @@
        <td VALIGN=top><small><center><a name="p94">94</a></center><p>
 	   * Moses, who heard the voice of God, the Speaker on Sinai. (A.T.)<p>
 	   <hr>
-	   4. <i>Tablets of Bahá'u'lláh</i>, p. 209.<p>
-	   5. <i>ibid</i>. p. 210.
+	   4. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para578">p. 209</a>.<p>
+	   5. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para579">p. 210</a>.
 	   <hr>
 	   [Thinkest thou that We...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para137">p. 84</a><p>
-	   [By God! Troubles have failed...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para138">p. 85</a><p>
+	   [By God! Troubles have failed...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para138">p. 85</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../V1/p105-152Ch09.html#p149">p. 149</a>
 	   </small></td>
 </tr>
 <tr>
@@ -111,10 +111,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p95">95</a></center><p>
 	   <hr>
-	   6. <i>Tablets of Bahá'u'lláh</i>, p. 213.<p>
-	   7. <i>ibid</i>. p. 205.
+	   6. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para585">p. 213</a>.<p>
+	   7. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para574">p. 205</a>.
 	   <hr>
-	   [Rely not on thy glory...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para159">p. 99</a>
+	   [Rely not on thy glory...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para159">p. 99</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../V3/p147-173Ch08.html#p163">p. 163</a>
 	   </small></td>
 </tr>
 <tr>
@@ -129,8 +129,8 @@
        <td VALIGN=top><small><center><a name="p96">96</a></center><p>
 	   * The King of the Martyrs and the Beloved of the Martyrs were descendants of the Prophet of Islám. (A.T.)<p>
 	   <hr>
-	   8. <i>Tablets of Bahá'u'lláh</i>, p. 207-8.<p>
-	   9. <i>ibid</i>. p. 208-9.
+	   8. <i>Tablets of Bahá'u'lláh</i>, p. <a href="../../../Baha/TOB/p001-270TOB.html#para577">207</a>-8.<p>
+	   9. <i>ibid</i>. p. <a href="../../../Baha/TOB/p001-270TOB.html#para577">208</a>-9.
 	   <hr>
 	   [Know thou that...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para136">p. 83</a><p>
 	   [Open thine eyes...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para136">p. 83</a><p>
@@ -152,10 +152,10 @@
        <td VALIGN=top><small><center><a name="p97">97</a></center><p>
 	   * see <a href="p425-428Apndx_I.html">Appendix I</a>.<p>
 	   <hr>
-	   10. <i>Tablets of Bahá'u'lláh</i>, p. 214.<p>
-	   11. <i>ibid</i>. p. 215.<p>
-	   12. <i>ibid</i>. p. 214.<p>
-	   13. <i>ibid</i>. pp. 215-16.
+	   10. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para587">p. 214</a>.<p>
+	   11. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para587">p. 215</a>.<p>
+	   12. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para587">p. 214</a>.<p>
+	   13. <i>ibid</i>. pp. <a href="../../../Baha/TOB/p001-270TOB.html#para587">215</a>-16.
 	   <hr>
 	   [O She-Serpent!...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para160">p. 100</a><p>
 	   [O perverse hater!...] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para160">p. 101</a><p>
@@ -175,8 +175,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p98">98</a></center><p>
 	   <hr>
-	   14. <i>Tablets of Bahá'u'lláh</i>, p. 211.<p>
-	   15. <i>ibid</i>. p. 213.<p>
+	   14. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para581">p. 211</a>.<p>
+	   15. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para585">p. 213</a>.<p>
 	   16. Quoted by Shoghi Effendi, <i>The Promised Day Is Come</i>, p. 19.<p>
 	   17. Unpublished compilation, National Archives Committee, no. 28, P. 364.
 	   <hr>
@@ -198,7 +198,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p99">99</a></center><p>
 	   <hr>
-	   18. <i>Tablets of Bahá'u'lláh</i>, pp. 61-2.<p>
+	   18. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para177">pp. 61</a>-2.<p>
 	   19. <i>Synopsis</i>, p. 26.<p>
 	   <hr>
 	   ["O concourse of divines! When..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para165">&para;165</a><p>
