--- a/Baha'i/Others/ROB/V4/p118-144Ch08.html
+++ b/Baha'i/Others/ROB/V4/p118-144Ch08.html
@@ -42,7 +42,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p118">118</a></center><p>
-	   * This Tablet has been translated in full into English and published in <i>Tablets of Bahá'u'lláh</i>, pp. 47-54.<p>
+	   * This Tablet has been translated in full into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#p45">pp. 47</a>-54.<p>
 	   † In the old days in Persia there were no colleges or universities in which students might graduate in the fields of science, art or technology. Those who were described as 'builder-architects' had learned their trade through practical experience working as apprentices to the great master-builders of the time.<p>
 	   ‡ see above, <a href="p033-049Ch03.html">ch. 3</a>.
 	   </small></td>
@@ -68,7 +68,7 @@
 	   * For a brief account of his life see vol. 1, pp. <a href="../V1/p198-209Ch11.html">198</a>-201.<p>
 	   † <i>Mashriqu'l-Adhkár</i>: literally, 'the Dawning-place of the Mention of God'. Unfortunately the building was damaged as a result of an earthquake in 1963 and had to be demolished.<p>
 	   <hr>
-	   1. <i>Tablets of Bahá'u'lláh</i>, p. 49.
+	   1. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para141">p. 49</a>.
 	   </small></td>
 </tr>
 
@@ -173,7 +173,7 @@
 	   * Bahá'u'lláh. (A.T.)<p>
 	   <hr>
 	   9. Bahá'u'lláh, quoted by Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', in <i>The World Order of Bahá'u'lláh</i>, p. 104.<p>
-	   10. <i>Tablets of Bahá'u'lláh</i>, p. 53.
+	   10. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para159">p. 53</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -324,7 +324,7 @@
        <td VALIGN=top><small><center><a name="p137">137</a></center><p>
 	   * see below, pp. <a href="p145-160Ch09.html#p155">155</a>-6.<p>
 	   <hr>
-	   26. <i>Tablets of Bahá'u'lláh</i>, p. 47.
+	   26. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para137">p. 47</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -348,7 +348,7 @@
        <td VALIGN=top><small><center><a name="p139">139</a></center><p>
 	   <hr>
 	   27. <i>Synopsis</i>, p. 27, also in <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#LXX">LXX</a>.<p>
-	   28. <i>Tablets of Bahá'u'lláh</i>, p. 50.<p>
+	   28. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para145">p. 50</a>.<p>
 	   <hr>
    	   ["The world's equilibrium..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para181">&para;181</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#LXX">LXX</a>
 	   </small></td>
@@ -367,7 +367,7 @@
 	   † see vol. 1, pp. <a href="../V1/p153-197Ch10.html#p185">185</a>, <a href="../V1/p294-314Ch18.html#p299">299n</a>.<p>
 	   ‡ see vol. 1, p. <a href="../V1/p045-052Ch04.html#p46">46</a>.<p>
 	   <hr>
-	   29. <i>Tablets of Bahá'u'lláh</i>, p. 51.
+	   29. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para148">p. 51</a>.
 	   </small></td>
 </tr>
 <tr>
