--- a/Baha'i/Others/ROB/V4/p145-160Ch09.html
+++ b/Baha'i/Others/ROB/V4/p145-160Ch09.html
@@ -42,7 +42,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p145">145</a></center><p>
-	   * The full text of this Tablet has been translated into English and published in <i>Tablets of Bahá'u'lláh</i>, pp. 101-34.<p>
+	   * The full text of this Tablet has been translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para294">pp. 101</a>-34.<p>
 	   † For more information about him see <i>God Passes By</i> and <i>Revelation of Bahá'u'lláh</i>, vols. <a href="../V1/p351-363Index.html#Muhammad-'Alí,Mírzá">1</a>, <a href="../V2/p469-476Index.html#Muhammad-'Alí,Mírzá">2</a> and <a href="../V3/p467-483Index.html#Muhammad-'Alí,Mírzá">3</a>.<p>
 	   ‡ For further information see vol. <a href="../V2/p469-476Index.html#Jamál-i-Burújirdí">2</a>.<p>
 	   <hr>
@@ -88,8 +88,8 @@
 	   * For details see <i>The Dawn-Breakers</i>, pp. 278-9, 368-74.<p>
 	   † see vol. 1, pp. <a href="../V1/p007-011Ch01.html#p8">8</a>-11.<p>
 	   <hr>
-	   2. <i>Tablets of Bahá'u'lláh</i>, p. 103.<p>
-	   3. <i>ibid</i>. p. 105.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para303">p. 103</a>.<p>
+	   3. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para306">p. 105</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -104,7 +104,7 @@
        <td VALIGN=top><small><center><a name="p149">149</a></center><p>
 	   * vol. 3, pp. <a href="../V3/p275-307Ch13.html#p300">300</a>-305.<p>
 	   <hr>
-	   4. <i>Tablets of Bahá'u'lláh</i>, pp. 106-7.
+	   4. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para309">pp. 106</a>-7.
 	   </small></td>
 </tr>
 <tr>
@@ -116,7 +116,7 @@
        <td VALIGN=top><small><center><a name="p150">150</a></center><p>
 	   * For a fuller discusson of this subject see above, pp. <a href="p118-144Ch08.html#p125">125</a>-39.<p>
 	   <hr>
-	   5. <i>Tablets of Bahá'u'lláh</i>, p. 108.
+	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para312">p. 108</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -158,7 +158,7 @@
        <td VALIGN=top><small><center><a name="p153">153</a></center><p>
 	   * see below, pp. <a href="p368-390Ch24.html#p372">372</a>-4, for the manner in which Bahá'u'lláh quotes from His own Writings. The passage that follows is part of a Tablet originally revealed in honour of Hájí Muhammad-Ibráhím, entitled by Bahá'u'lláh 'Muballigh' (teacher, proclaimer). He quotes it again at length in <a href="../../../Baha/EW/p001-182.html#para194"><i>Epistle to the Son of the Wolf</i></a>.<p>
 	   <hr>
-	   7. <i>Tablets of Bahá'u'lláh</i>, p. 107.
+	   7. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para310">p. 107</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -175,7 +175,7 @@
        <td VALIGN=top><small><center><a name="p154">154</a></center><p>
 	   * see vol. 2, pp. <a href="../V2/p270-282Ch12.html">270</a>-72, and <a href="../V2/p422-426Apndx_I.html">Appendix I</a>.<p>
 	   <hr>
-	   8. <i>Tablets of Bahá'u'lláh</i>, pp. 117-18.<p>
+	   8. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para332">pp. 117</a>-18.<p>
 	   9. Daniel 12:8-9.
 	   </small></td>
 </tr>
@@ -232,7 +232,7 @@
        <td VALIGN=top><small><center><a name="p158">158</a></center><p>
 	   <hr>
 	   15. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para422">CIII</a>.<p>
-	   16. <i>Tablets of Bahá'u'lláh</i>, p. 129.<p>
+	   16. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para365">p. 129</a>.<p>
 	   <hr>
 	   ["O people of Bahá..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p089-102Supp.html#p91">p. 91</a>
 	   </small></td>
@@ -249,7 +249,8 @@
 	   <hr>
 	   17. <i>Nafahát-i-Quds</i>, pp. 5-8.<p>
 	   <hr>
-	   ["Select ye a single language..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para189">&para;189</a>
+	   ["Select ye a single language..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para189">&para;189</a><p>
+	   ["The third Glad-Tidings..."] <a href="../../../Baha/TOB/p001-270TOB.html#para46"><i>Bishárát</i></a>
 	   </small></td>
 </tr>
 <tr>
