--- a/Baha'i/Others/ROB/V4/p168-176Ch11.html
+++ b/Baha'i/Others/ROB/V4/p168-176Ch11.html
@@ -45,7 +45,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p168">168</a></center><p>
-	   * The text of this Tablet is translated in full into English, see <i>Tablets of Bahá'u'lláh</i>, pp. 33-44.<p>
+	   * The text of this Tablet is translated in full into English, see <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para87">pp. 33</a>-44.<p>
 	   † Bahá'u'lláh states that the meaning of the Word of God cannot be exhausted. For further information see vol. 1, p. <a href="../V1/p018-044Ch03.html#p32">32</a>.<p>
 	   ‡ For further discussion see vol. 3, pp. <a href="../V3/p087-107Ch05.html#p94">94</a>-6.
 	   </small></td>
@@ -60,7 +60,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p169">169</a></center><p>
 	   <hr>
-	   1. <i>Tablets of Bahá'u'lláh</i>, p. 33.
+	   1. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para91">p. 33</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -107,7 +107,7 @@
        <td VALIGN=top><small><center><a name="p172">172</a></center><p>
 	   * see vol. 2, pp. <a href="../V2/p283-290Ch13.html#p286">286</a>-90.<p>
 	   <hr>
-	   4. <i>Tablets of Bahá'u'lláh</i>, p. 33.<p>
+	   4. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para90">p. 33</a>.<p>
 	   5. Unpublished compilation, National Archives Committee, no. 41, p. 241.
 	   </small></td>
 </tr>
@@ -123,7 +123,7 @@
 	   * Concerning Bahá'u'lláh's condemnation of religious leaders see the <a href="../../../Baha/KI/p271-274Index.html#Divines"><i>Kitáb-i-Íqán</i></a> and vol. 1, pp. <a href="../V1/p153-197Ch10.html#p163">163</a>-4.<p>
 	   † see above, p. <a href="p011-032Ch02.html#p17">17</a>.<p>
 	   <hr>
-	   6. <i>Tablets of Bahá'u'lláh</i>, p. 35.
+	   6. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para98">p. 35</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -136,7 +136,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p174">174</a></center><p>
 	   <hr>
-	   7. <i>ibid</i>. p. 42.
+	   7. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para126">p. 42</a>.
 	   <hr>
 	   [Mírzá Hádí Dawlat-Ábádí] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para141">p. 87</a>
 	   </small></td>
@@ -154,7 +154,7 @@
 	   * For a brief account of his martyrdom see below, pp. <a href="p368-390Ch24.html#p385">385</a>-6. He should not be confused with Mírzá Ashraf of Zanján to whose martyrdom reference is made in vol. 2, pp. <a href="../V2/p222-235Ch10.html#p223">223</a>-30.<p>
 	   † see below, <a href="p214-226Ch15.html">ch. 15</a>.<p>
 	   <hr>
-	   8. <i>Tablets of Bahá'u'lláh</i>, p. 42.<br>
+	   8. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para128">p. 42</a>.<br>
 	   </small></td>
 </tr>
 <tr>
@@ -167,8 +167,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p176">176</a></center><p>
 	   <hr>
-	   9. <i>Tablets of Bahá'u'lláh</i>, p. 79.<p>
-	   10. <i>ibid</i>. p. 42.
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para244">p. 79</a>.<p>
+	   10. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para127">p. 42</a>.
 	   </small></td>
 </tr>
 </table>
