--- a/Baha'i/Others/ROB/V4/p190-204Ch13.html
+++ b/Baha'i/Others/ROB/V4/p190-204Ch13.html
@@ -68,7 +68,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p192">192</a></center><p>
 	   <hr>
-	   2. <i>Tablets of Bahá'u'lláh</i>, p. 143.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para406">p. 143</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -120,9 +120,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p196">196</a></center><p>
 	   <hr>
-	   7. <i>Tablets of Bahá'u'lláh</i>, p. 64.<p>
+	   7. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para188">p. 64</a>.<p>
 	   8. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para590">CXXXII</a>.<p>
-	   9. Lawh-i-Maqsúd, <i>Tablets of Bahá'u'lláh</i>, p. 164.
+	   9. Lawh-i-Maqsúd, <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para469">p. 164</a>.
 	   <hr>
 	   ["O well-beloved ones!..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#CXII">CXII</a>
 	   </small></td>
