--- a/Baha'i/Others/ROB/V4/p227-238Ch16.html
+++ b/Baha'i/Others/ROB/V4/p227-238Ch16.html
@@ -42,7 +42,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p227">227</a></center><p>
-	   * Not to be confused with the <i>Kitáb-i-Aqdas</i>, the full text of this Tablet has been translated into English and published in <i>Tablets of Bahá'u'lláh</i>, pp. 9-17.<p>
+	   * Not to be confused with the <a href="../../../Baha/KA/Cover.html"><i>Kitáb-i-Aqdas</i></a>, the full text of this Tablet has been translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para9">pp. 9</a>-17.<p>
 	   † see vol. 3, pp. <a href="../V3/p001-031Ch01.html#p5">5</a>-11.<p>
 	   ‡ see vol. 3, p. <a href="../V3/p221-252Ch11.html#p244">244</a>.<p>
 	   </small></td>
@@ -61,7 +61,7 @@
        <td VALIGN=top><small><center><a name="p228">228</a></center><p>
 	   * Jesus Christ. (A.T.)<p>
 	   <hr>
-	   1. <i>Tablets of Bahá'u'lláh</i>, p. 11.
+	   1. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para19">p. 11</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -80,8 +80,8 @@
        <td VALIGN=top><small><center><a name="p229">229</a></center><p>
 	   * see vol. 2, p. <a href="../V2/p270-282Ch12.html">270</a>, and <a href="../V2/p422-426Apndx_I.html">Appendix 1</a>, pp. 422-6.<p>
 	   <hr>
-	   2. <i>Tablets of Bahá'u'lláh</i>, pp. 9-10.<p>
-	   3. <i>ibid</i>. p. 14.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para14">pp. 9</a>-10.<p>
+	   3. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para26">p. 14</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -101,7 +101,7 @@
 	   <hr>
 	   4. Quoted by Shoghi Effendi, <i>The Promised Day is Come</i>, pp. 104-5.<p>
 	   5. <i>ibid</i>. p. 105.<p>
-	   6. <i>Tablets of Bahá'u'lláh</i>, p. 13.
+	   6. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para24">p. 13</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -156,7 +156,7 @@
 	   * See vol. 2, p. <a href="../V2/p029-054Ch02.html#p30">30</a>.<p>
 	   <hr>
 	   7. Quoted by David Hofman, <i>A Life of George Townshend</i>, p. 49.<p>
-	   8. <i>Tablets of Bahá'u'lláh</i>, p. 13.
+	   8. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para25">p. 13</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -192,10 +192,11 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p235">235</a></center><p>
-	   * Translated into English and published in <i>Tablets of Bahá'u'lláh</i>, pp. 161-78.<p>
+	   * Translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para461">pp. 161</a>-78.<p>
 	   † see note, p. <a href="p011-032Ch02.html#p23">23</a>.<p>
 	   <hr>
-	   11. <i>Tablets of Bahá'u'lláh</i>, pp. 16-17.
+	   11. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para35">pp. 16</a>-17.<p>
+	   <a href="../../../Baha/TOB/p001-270TOB.html#para461"><i>Lawh-i-Maqsúd</i></a>
 	   </small></td>
 </tr>
 <tr>
@@ -211,9 +212,9 @@
        <td VALIGN=top><small><center><a name="p236">236</a></center><p>
 	   * see vol. 3, pp. <a href="../V3/p308-321Ch14.html#p317">317</a>-18.<p>
 	   † For an explanation of the necessity of punishment see vol. 3, pp. <a href="../V3/p275-307Ch13.html#p294">294</a>-7.<p>
-	   ‡ Translated into English and published in <i>Tablets of Bahá'u'lláh</i>, pp. 195-201.<p>
+	   ‡ Translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para546">pp. 195</a>-201.<p>
 	   <hr>
-	   12. <i>Tablets of Bahá'u'lláh</i>, p. 169.
+	   12. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para483">p. 169</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -226,7 +227,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p237">237</a></center><p>
 	   * see vol. <a href="../V2/p469-476Index.html#Mihdíy-i-Dahají,Siyyid">2</a>.<p>
-	   † see <i>Tablets of Bahá'u'lláh</i>, pp. 143, 198-9.
+	   † see <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para406">pp. 143</a>, <a href="../../../Baha/TOB/p001-270TOB.html#para561">198</a>-9.
 	   </small></td>
 </tr>
 <tr>
@@ -241,7 +242,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p238">238</a></center><p>
 	   <hr>
-	   13. <i>Tablets of Bahá'u'lláh</i>, p. 200.<p>
+	   13. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para566">p. 200</a>.<p>
 	   14. <i>Bihjatu's-Sudúr</i>, p. 184.
 	   </small></td>
 </tr>
