--- a/Baha'i/Others/ROB/V4/p239-256Ch17.html
+++ b/Baha'i/Others/ROB/V4/p239-256Ch17.html
@@ -56,6 +56,8 @@
        <td VALIGN=top><small><center><a name="p240">240</a></center><p>
 	   <hr>
 	   1. <i>God Passes By</i>, p. 193.
+	   <hr>
+	   <a href="../../../Baha/TOB/p001-270TOB.html#para604"><i>Lawh-i-Ard-i-Bá</i></a>
 	   </small></td>
 </tr>
 <tr>
@@ -71,7 +73,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p241">241</a></center><p>
 	   <hr>
-	   2. <i>Tablets of Bahá'u'lláh</i>, pp. 227-8.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para604">pp. 227</a>-8.
 	   </small></td>
 </tr>
 <tr>
