--- a/Baha'i/Others/ROB/V4/p274-293Ch19.html
+++ b/Baha'i/Others/ROB/V4/p274-293Ch19.html
@@ -249,7 +249,7 @@
        <td VALIGN=top><small><center><a name="p288">288</a></center><p>
 	   * see below, <a href="p329-350Ch22.html">ch. 22</a>.<p>
 	   <hr>
-	   15. <i>Tablets of Bahá'u'lláh</i>, p. 83.
+	   15. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para252">p. 83</a>.
 	   </small></td>
 </tr>
 <tr>
