--- a/Baha'i/Others/ROB/V4/p329-350Ch22.html
+++ b/Baha'i/Others/ROB/V4/p329-350Ch22.html
@@ -43,7 +43,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p329">329</a></center><p>
-   	   * The full text revealed in Persian has been translated into English and is published in <i>Tablets of Bahá'u'lláh</i>, pp. 83-97.<p>
+   	   * The full text revealed in Persian has been translated into English and is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para248">pp. 83</a>-97.<p>
 	   † For some details of her noble life see vol. 2, pp. <a href="../V2/p370-387Ch17.html#p382">382</a>-7.<p>
 	   ‡ For details see vol. 1, pp. <a href="../V1/p153-197Ch10.html">153</a>-9.
 	   </small></td>
@@ -188,7 +188,7 @@
        <td VALIGN=top><small><center><a name="p338">338</a></center><p>
   	   * They were photographed wearing these chains, see vol. 3, facing p. <a href="../V3/p052-072Ch03.html#facingp61">61</a>.<p>
 	   <hr>
-	   1. <i>Tablets of Bahá'u'lláh</i>, p. 83.
+	   1. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para251">p. 83</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -204,7 +204,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p339">339</a></center><p>
 	   <hr>
-	   2. <i>Tablets of Bahá'u'lláh</i>, pp. 86, 89.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para259">pp. 86</a>, <a href="../../../Baha/TOB/p001-270TOB.html#para266">89</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -218,10 +218,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p340">340</a></center><p>
 	   <hr>
-	   3. <i>Tablets of Bahá'u'lláh</i>, p. 88.<p>
-	   4. <i>ibid</i>. pp. 87-8.<p>
+	   3. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para265">p. 88</a>.<p>
+	   4. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para262">pp. 87</a>-8.<p>
 	   5. Persian no. <a href="../../../Baha/HiddenWords.html#persian3">3</a>.<p>
-	   6. <i>Tablets of Bahá'u'lláh</i>, p. 87.
+	   6. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para261">p. 87</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -236,7 +236,7 @@
 	   * Cursing is a common practice among the Persians, especially among the clergy who pride themselves in pronouncing a person to be <i>Mal'ún</i> (accursed) with a guttural sound of the letter 'U'. By doing so, not only has the clergy put a curse on someone, but by pronouncing the letter 'U' with a guttural sound he proudly puts himself in the category of a scholar of the Arabic language. Thus he makes a great impression upon the untutored multitude who never know how to use a guttural sound and are lost in admiration for one who does.<p>
 	   † see below, pp. <a href="p391-412Ch25.html#p401">401</a>-2.<p>
 	   <hr>
-	   7. <i>Tablets of Bahá'u'lláh</i>, p. 94.
+	   7. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para285">p. 94</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -251,7 +251,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p342">342</a></center><p>
 	   <hr>
-	   8. <i>Tablets of Bahá'u'lláh</i>, pp. 96-7.
+	   8. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para291">pp. 96</a>-7.
 	   </small></td>
 </tr>
 <tr>
@@ -264,7 +264,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p343">343</a></center><p>
 	   <hr>
-	   9. <i>Tablets of Bahá'u'lláh</i>, pp. 90-91.<p>
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para274">pp. 90</a>-91.<p>
 	   10. Ustád 'Alí-Akbar-i-Banná, unpublished history of 'Ishqábád.
 	   </small></td>
 </tr>
@@ -318,7 +318,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p347">347</a></center><p>
 	   <hr>
-	   11. <i>Tablets of Bahá'u'lláh</i>, p. 85.
+	   11. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para257">p. 85</a>.
 	   </small></td>
 </tr>
 <tr>
