--- a/Baha'i/Others/ROB/V4/p351-367Ch23.html
+++ b/Baha'i/Others/ROB/V4/p351-367Ch23.html
@@ -43,6 +43,8 @@
        <td VALIGN=top><small><center><a name="p351">351</a></center><p>
 	   * Translated into English by Shoghi Effendi, <i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#XI">XI</a>.<p>
 	   † see vol. 3, pp. <a href="../V3/p001-031Ch01.html#p28">28</a>-31.
+	   <hr>
+	   <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html">p. 1</a>
 	   </small></td>
 </tr>
 <tr>
@@ -55,7 +57,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p352">352</a></center><p>
 	   * see vol. 1, pp. <a href="../V1/p045-052Ch04.html#p46">46</a>-9.<p>
-	   † see <i>Tablets of Bahá'u'lláh</i>, pp. 9-17.
+	   † see <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para9">pp. 9</a>-17.
+	   <hr>
+	   ["All glory be to this Day..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para3">p. 3</a>
 	   </small></td>
 </tr>
 <tr>
@@ -69,7 +73,7 @@
        <td VALIGN=top><small><center><a name="p353">353</a></center><p>
 	   <hr>
 	   1. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#XI">XI</a>.<p>
-	   2. <i>Tablets of Bahá'u'lláh</i>, p. 13.<p>
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para24">p. 13</a>.<p>
 	   3. Unpublished compilation, National Archives Committee, no. 19, pp. 262-3.<p>
 	   4. <i>ibid</i>. no. 73, p. 363.
 	   </small></td>
@@ -96,6 +100,8 @@
 	   <hr>
 	   5. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para30">XI</a>.<p>
 	   6. Isaiah 35:1-2.
+	   <hr>
+	   ["Seized with transports of joy..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para4">p. 3</a>
 	   </small></td>
 </tr>
 <tr>
@@ -108,6 +114,8 @@
        <td VALIGN=top><small><center><a name="p356">356</a></center><p>
 	   <hr>
 	   7. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para31">XI</a>.
+	   <hr>
+	   ["No sooner had her voice..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para5">p. 4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -125,6 +133,8 @@
        <td VALIGN=top><small><center><a name="p357">357</a></center><p>
 	   <hr>
 	   8. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para32">XI</a>.
+	   <hr>
+	   ["Call out to Zion..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para6">p. 4</a>
 	   </small></td>
 </tr>
 <tr>
@@ -139,8 +149,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p358">358</a></center><p>
 	   <hr>
-	   9. <i>Tablets of Bahá'u'lláh</i>, p. 84.<p>
-	   10. <i>Gleanings</i>, XI.
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para254">p. 84</a>.<p>
+	   10. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para32">XI</a>.
+	   <hr>
+	   ["Hasten forth and circumambulate..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para6">p. 4</a>
 	   </small></td>
 </tr>
 <tr>
