--- a/Baha'i/Others/ROB/V4/p368-390Ch24.html
+++ b/Baha'i/Others/ROB/V4/p368-390Ch24.html
@@ -128,7 +128,9 @@
        <td VALIGN=top><small><center><a name="p373">373</a></center><p>
 	   * see above, pp. <a href="p033-049Ch03.html#p47">47</a>-8.<p>
 	   <hr>
-	   2. <i>Tablets of Bahá'u'lláh</i>, pp. 148-9.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para420">pp. 148</a>-9.
+	   <hr>
+	   ["Thou knowest full well..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p033-049Ch03.html#p48">p. 48</a>
 	   </small></td>
 </tr>
 <tr>
@@ -144,7 +146,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p374">374</a></center><p>
-	   * see <i>Tablets of Bahá'u'lláh</i>, p. 63, and <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para53">p. 28</a>.<p>
+	   * see <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para185">p. 63</a>, and <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para53">p. 28</a>.<p>
 	   † For details of the <i>Lawh-i-Sultán</i> see vol. 2, pp. <a href="../V2/p337-369Ch16.html">337</a>-57, and vol. 3, <a href="../V3/p174-203Ch09.html">ch. 9</a>.<p>
 	   <hr>
 	   3. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para13">p. 11</a>.
@@ -209,6 +211,8 @@
 	   20. <i>ibid</i>. <a href="../../../Baha/EW/p001-182.html#para93">p. 54</a>.<p>
 	   21. <i>ibid</i>. <a href="../../../Baha/EW/p001-182.html#para200">p. 137</a>.<p>
 	   22. <i>ibid</i>. <a href="../../../Baha/EW/p001-182.html#para197">p. 135</a>.
+	   <hr>
+	   ["Say: O people of God!..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para335">p. 120</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="p011-032Ch02.html#p18">p. 18</a>
 	   </small></td>
 </tr>
 <tr>
@@ -396,7 +400,7 @@
        <td>
 	   in 'Ishqábád, a moving episode which has already been related elsewhere in this book.*<p>
 	   By referring to these heart-rending stories of the martyrs, Bahá'u'lláh highlights the most important aim of His Cause, namely to blot out every trace of enmity and hatred from the hearts of men and unite mankind through the power of His Revelation. He testifies to this exalted aim in His Will and Testament, the Book of the Covenant:<p>
-	   <blockquote>The aim of this Wronged One is sustaining woes and tribulations, in revealing the Holy Verses and in demonstrating proofs hath been naught but to quench the flame of hate and enmity, that the horizon of the hearts of men may be illumined with the light of concord and attain real peace and tranquillity...<small><sup>36</sup></small></blockquote>
+	   <blockquote>The aim of this Wronged One in sustaining woes and tribulations, in revealing the Holy Verses and in demonstrating proofs hath been naught but to quench the flame of hate and enmity, that the horizon of the hearts of men may be illumined with the light of concord and attain real peace and tranquillity...<small><sup>36</sup></small></blockquote>
 	   In the <i>Epistle to the Son of the Wolf</i> Bahá'u'lláh cites for the Shaykh long passages from His Tablets to the kings and rulers of His time, Tablets through which He had proclaimed His Mission, unveiled the nature of His Revelation, elucidated its fundamental <span TITLE="a statement, principle, or belief, that is true, especially an enduring truth.">verities</span>, described some of His universal teachings, issued His exhortations, and summoned the most potent among the crowned heads of the world to embrace His Cause. Parts of these Tablets addressed to Násiri'd-Dín Sháh (known as the <i>Lawh-i-Sultán</i>), to Napoleon III, to the Czar of Russia and Queen Victoria are re-revealed in this mighty Epistle. These Tablets have already been referred to in some detail in previous volumes.†<p>
 	   Another subject which comes up in various parts of the <i>Epistle to the Son of the Wolf</i> is the suffering inflicted upon Bahá'u'lláh from the early days of the Báb's Ministry. Quoting a passage from His Tablet to Queen Victoria Bahá'u'lláh remarks:<p>
 	   <blockquote>Consider these days in which He Who is the Ancient Beauty</blockquote>
@@ -406,7 +410,7 @@
 	   * see above, pp. <a href="p329-350Ch22.html#p342">342</a>-4.<p>
 	   † For the <i>Lawh-i-Sultán</i> see vol. 2, <a href="../V2/p337-369Ch16.html">ch. 16</a>, and vol. 3, <a href="../V3/p174-203Ch09.html">ch. 9</a>. For the Tablet to Napoleon III see vol. 2, pp. <a href="../V2/p337-369Ch16.html#p368">368</a>-9, and vol. 3, pp. <a href="../V3/p108-132Ch06.html#p110">110</a>-15. For the Tablet to Czar Alexander II see vol. 3, pp. <a href="../V3/p108-132Ch06.html#p118">118</a>-23. For the Tablet to Queen Victoria see vol. 3, pp. <a href="../V3/p108-132Ch06.html#p123">123</a>-8.<p>
 	   <hr>
-	   36. <i>Tablets of Bahá'u'lláh</i>, p. 219.
+	   36. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para590">p. 219</a>.
 	   </small></td>
 </tr>
 <tr>
