--- a/Baha'i/Others/ROB/V4/p413-424Ch26.html
+++ b/Baha'i/Others/ROB/V4/p413-424Ch26.html
@@ -128,7 +128,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p419">419</a></center><p>
 	   * see vol. 1, pp. <a href="../V1/p198-209Ch11.html#p205">205</a>-6.<p>
-	   † The full text of the <i>Kitáb-i-'Ahdí</i>, or, as it is usually called, the <i>Kitáb-i-'Ahd</i> (Book of the Covenant), is translated into English and published in <i>Tablets of Bahá'u'lláh</i>, pp. 219-23.<p>
+	   † The full text of the <i>Kitáb-i-'Ahdí</i>, or, as it is usually called, the <i>Kitáb-i-'Ahd</i> (Book of the Covenant), is translated into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para588">pp. 219</a>-23.<p>
 	   <hr>
 	   4. Ishráq Khávarí, <i>Ayyám-i-Tis'ih</i>, pp. 404-5.
 	   </small></td>
