--- a/Baha'i/Others/ROB/V4/p425-428Apndx_I.html
+++ b/Baha'i/Others/ROB/V4/p425-428Apndx_I.html
@@ -36,12 +36,15 @@
        <td width="80%"><center>APPENDIX I</center><p>
 	   <center><h2>The People of 'Ád and Thamúd; Húd;<br>
 	   Sálih and the She-Camel</h2></center><p>
-	   These names mentioned in the <i>Lawh-i-Burhán</i> (Chapter 6 above) appear in various chapters of the <i>Qur'án</i>. Húd and Sálih were prophets of God who appeared before Abraham, but they are not mentioned in the Old or the New Testament. The people of 'Ád and Thamúd inhabited a large tract of country in Southern Arabia. Tradition has it that 'Ád was a fourth-generation descendant of Noah. His people, who are said to be of a tall race, were idolators and aggressive people. In the <i>Qur'án</i> it is stated that the People of both 'Ád and Thamúd were fine builders, gifted with intelligence and skills, but that they were guided by the Evil One, Satan.<p>
+	   These names mentioned in the <i>Lawh-i-Burhán</i> (<a href="p091-102Ch06.html">Chapter 6</a> above) appear in various chapters of the <i>Qur'án</i>. Húd and Sálih were prophets of God who appeared before Abraham, but they are not mentioned in the Old or the New Testament. The people of 'Ád and Thamúd inhabited a large tract of country in Southern Arabia. Tradition has it that 'Ád was a fourth-generation descendant of Noah. His people, who are said to be of a tall race, were idolators and aggressive people. In the <i>Qur'án</i> it is stated that the People of both 'Ád and Thamúd were fine builders, gifted with intelligence and skills, but that they were guided by the Evil One, Satan.<p>
 	   God chose Húd to be a prophet to the people of 'Ád. He too is said to be a fourth-generation descendant of Noah, and therefore a cousin of 'Ád. Húd proclaimed to his people that God had chosen him as a prophet, and preached to them the one true God and the destruction of their idols. But they rejected him and only a few became his followers. When the people did not respond to his preaching, he warned them of an impending calamity. This took place, and all perished except Húd and his followers. The nature of this calamity is given in the <i>Qur'án</i>:<p>
 	   <blockquote>...and Ad were destroyed by a roaring and furious wind; which God caused to assail them for seven nights and eight days successively: thou mightest have seen people, during the same, lying prostrate, as though they had been the roots of</blockquote>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p425">425</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p425">425</a></center><p>
+   	   <hr>
+	   <a href="../../../Baha/TOB/p001-270TOB.html#para587"><i>Lawh-i-Burhán</i></a>
+	   </small></td>
 </tr>
 <tr>
        <td>
