--- a/Baha'i/Others/ROB/V4/p432-440Apndx_III.html
+++ b/Baha'i/Others/ROB/V4/p432-440Apndx_III.html
@@ -295,7 +295,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="79"/>79</td>
-       <td><i>'Lawh-i-Burhán'</i>, see above, <a href="p091-102Ch06.html">Chapter 6</a>.</td>
+       <td>'<a href="../../../Baha/TOB/p001-270TOB.html#para571"><i>Lawh-i-Burhán</i></a>', see above, <a href="p091-102Ch06.html">Chapter 6</a>.</td>
        <td></td>
 </tr>
 <tr>
