--- a/Baha'i/Others/ROB/V4/p441-445Biblio.html
+++ b/Baha'i/Others/ROB/V4/p441-445Biblio.html
@@ -67,7 +67,7 @@
 	   <i><a href="../../../Baha/KI/Cover.html">Kitáb-i-Íqán</a></i>. <i>The Book of Certitude</i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn 1974.<p>
 	   <i>Prayers and Meditations by Bahá'u'lláh</i>. Translated by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, 6th RP 1974.<p>
 	   <i><a href="../../../Baha/TSVATFV.html">The Seven Valleys and the Four Valleys</a></i>. Translated by Marzieh Gail and All-Kuli Khán. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn 1978.<p>
-	   <i>Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</i>. Compiled by the Research Department of the Universal House of
+	   <i><a href="../../../Baha/TOB/Cover.html">Tablets of Bahá'u'lláh revealed after the Kitáb-i-Aqdas</a></i>. Compiled by the Research Department of the Universal House of
 	   </blockquote>
 	   </td>
        <td></td>
