--- a/Baha'i/Others/ROB/V4/p161-167Ch10.html
+++ b/Baha'i/Others/ROB/V4/p161-167Ch10.html
@@ -42,7 +42,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p161">161</a></center><p>
-	   * This Tablet has been translated in full into English and published in <i>Tablets of Bahá'u'lláh</i>, pp. 21-9.<p>
+	   * This Tablet has been translated in full into English and published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para37">pp. 21</a>-9.<p>
 	   <hr>
 	   1. Unpublished compilation, National Archives Committee, no. 27, p. 491.
 	   </small></td>
@@ -62,7 +62,7 @@
 	   ‡ for further discussion of this subject see vol. 3, pp. <a href="../V3/p147-173Ch08.html#p156">156</a>-61.<p>
 	   § see below, pp. <a href="p368-390Ch24.html#p372">372</a>-4.<p>
 	   <hr>
-	   2. <i>Tablets of Bahá'u'lláh</i>, p. 22.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para45">p. 22</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -80,9 +80,9 @@
 	   * Jesus Christ.<p>
 	   <hr>
 	   3. <i>Má'idiy-i-Ásamání</i>, vol. 4, p. 33.<p>
-	   4. <i>Tablets of Bahá'u'lláh</i>, p. 24.
+	   4. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para59">p. 24</a>.
 	   <hr>
-	   ["It is incumbent..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para33">&para;33</a>
+	   ["It is incumbent..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para33">&para;33</a>; <i>Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../V3/p343-370Ch16.html#p351">p. 351</a>;
 	   </small></td>
 </tr>
 <tr>
@@ -96,8 +96,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p164">164</a></center><p>
 	   <hr>
-	   5. <i>Tablets of Bahá'u'lláh</i>, p. 26.<p>
-	   6. <i>ibid</i>. p. 24.<p>
+	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para72">p. 26</a>.<p>
+	   6. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para61">p. 24</a>.<p>
 	   7. Quoted by A. Sulaymání, <i>Masábih-i-Hidáyat</i>, vol. 1, p. 488.
 	   </small></td>
 </tr>
@@ -138,7 +138,7 @@
        <td VALIGN=top><small><center><a name="p167">167</a></center><p>
 	   <hr>
 	   10. <i>Dawn of a New Day</i>, pp. 77-8.<p>
-	   11. <i>Tablets of Bahá'u'lláh</i>, p. 28.
+	   11. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para83">p. 28</a>.
 	   </small></td>
 </tr>
 
