--- a/Baha'i/Others/ROB/V4/p205-213Ch14.html
+++ b/Baha'i/Others/ROB/V4/p205-213Ch14.html
@@ -46,7 +46,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p205">205</a></center><p>
-	   * This Tablet has been translated into English and is published in <i>Tablets of Bahá'u'lláh</i>, pp. 181-91.<p>
+	   * This Tablet has been translated into English and is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para515">pp. 181</a>-91.<p>
 	   † High-ranking religious leader of a city.<p>
 	   ‡ For details see <i>The Dawn-Breakers</i>.
 	   </small></td>
@@ -60,7 +60,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
        <td></td>
        <td VALIGN=top><small><center><a name="p206">206</a></center><p>
 	   <hr>
-	   1. <i>Tablets of Bahá'u'lláh</i>, pp. 187-8; also <i>Gleanings</i> <a href="../../../Baha/GL/p003-346.html#LXXIX">LXXIX</a>.
+	   1. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para536">pp. 187</a>-8; also <i>Gleanings</i> <a href="../../../Baha/GL/p003-346.html#LXXIX">LXXIX</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -81,8 +81,8 @@ p. 209 - changed "but for whom God" to "But for him, God"
 	   * see vol. 1, pp. <a href="../V1/p105-152Ch09.html#p116">116</a>-17.<p>
 	   † see the <a href="../../../Baha/KI/p271-274Index.html#Resurrection"><i>Kitáb-i-Íqán</i></a> [Resurrection] and <i>The Revelation of Bahá'u'lláh</i>, vol. 1, pp. <a href="../V1/p153-197Ch10.html#p184">184</a>-5.<p>
 	   <hr>
-	   2. <i>Tablets of Bahá'u'lláh</i>, p. 185.<p>
-	   3. <i>ibid</i>. p. 182.
+	   2. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para532">p. 185</a>.<p>
+	   3. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para521">p. 182</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -95,7 +95,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
        <td VALIGN=top><small><center><a name="p208">208</a></center><p>
 	   * Mullá Husayn. (A.T.)<p>
 	   <hr>
-	   4. <i>Tablets of Bahá'u'lláh</i>, p. 186.
+	   4. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para533">p. 186</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -110,7 +110,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
 	   * see also vol. 2, p. <a href="../V2/p171-193Ch08.html#p182">182</a>.<p>
 	   † For further information about this heroic episode, see <i>The Dawn-Breakers</i>, chapters XIV and XIX. In those days the type of one's head-dress was indicative of one's status in the community. The significance of the Black Standard comes from the Hadíth (tradition) of Islám which states that whenever it was unfurled at Khurásán, it would signalize the advent of God's new Revelation on earth.<p>
 	   <hr>
-	   5. <i>Tablets of Bahá'u'lláh</i>, pp. 184-5.<p>
+	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para530">pp. 184</a>-5.<p>
 	   6. <i>Kitáb-i-Íqán</i>, <a href="../../../Baha/KI/p095-258.html#para146">p. 223</a>.
 	   </small></td>
 </tr>
@@ -143,9 +143,9 @@ p. 209 - changed "but for whom God" to "But for him, God"
 	   * A designation for women. (A.T.)<p>
 	   † see Qur'án 20:87-98.<p>
 	   <hr>
-	   8. <i>Tablets of Bahá'u'lláh</i>, pp. 183, 184, 185 <i>passim</i>.<p>
-	   9. <i>ibid</i>. p. 189.<p>
-	   10. <i>ibid</i>. p. 190.
+	   8. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para528">pp. 183</a>, <a href="../../../Baha/TOB/p001-270TOB.html#para528">184</a>, <a href="../../../Baha/TOB/p001-270TOB.html#para531">185</a> <i>passim</i>.<p>
+	   9. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para540">p. 189</a>.<p>
+	   10. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para543">p. 190</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -160,7 +160,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
        <td></td>
        <td VALIGN=top><small><center><a name="p212">212</a></center><p>
 	   <hr>
-	   11. <i>Tablets of Bahá'u'lláh</i>, p. 188.<p>
+	   11. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para538">p. 188</a>.<p>
 	   12. <i>Synopsis</i>, p. 22.<p>
 	   <hr>
 	   ["Say: O leaders of religion!..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para99">&para;99</a>;  <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para190">p. 128</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#XCVIII">XCVIII</a>; <p>
