--- a/Baha'i/Others/ROB/V4/p214-226Ch15.html
+++ b/Baha'i/Others/ROB/V4/p214-226Ch15.html
@@ -40,7 +40,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p1">1</a></center><p>
-	   * A full translation of this Tablet is published in <i>Tablets of Bahá'u'lláh</i>, pp. 57-80.<p>
+	   * A full translation of this Tablet is published in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para162">pp. 57</a>-80.<p>
 	   † For a further discussion on this subject see above pp. <a href="p011-032Ch02.html#p27">27</a>-8.<p>
 	   ‡ see above, pp. <a href="p118-144Ch08.html#p125">125</a>-39.
 	   </small></td>
@@ -73,7 +73,7 @@
        <td VALIGN=top><small><center><a name="p216">216</a></center><p>
 	   * see vol. 3, pp. <a href="../V3/p275-307Ch13.html">275</a>-94<p>
 	   <hr>
-	   1. <i>Tablets of Bahá'u'lláh</i>, p. 64.
+	   1. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para190">p. 64</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -106,8 +106,8 @@
        <td VALIGN=top><small><center><a name="p218">218</a></center><p>
 	   * see vol. 1, p. <a href="../V1/p018-044Ch03.html#p35">35</a>.<p>
 	   <hr>
-	   4. <i>Tablets of Bahá'u'lláh</i>, pp. 61-2.<p>
-	   5. <i>ibid</i>. pp. 78-9.<p>
+	   4. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para177">pp. 61</a>-2.<p>
+	   5. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para241">pp. 78</a>-9.<p>
 	   6. Unpublished compilation, National Archives Committee, no. 28, p. 292.
 	   </small></td>
 </tr>
@@ -137,8 +137,8 @@
        <td VALIGN=top><small><center><a name="p220">220</a></center><p>
 	   * The Báb. (A. T.)<p>
 	   <hr>
-	   9. <i>Tablets of Bahá'u'lláh</i>, pp. 74-5.<p>
-	   10. <i>ibid</i>. p. 75.
+	   9. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para232">pp. 74</a>-5.<p>
+	   10. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para233">p. 75</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -154,8 +154,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p221">221</a></center><p>
 	   <hr>
-	   11. <i>Tablets of Bahá'u'lláh</i>, pp. 75-6.<p>
-	   12. <i>ibid</i>. p. 61.
+	   11. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para235">pp. 75</a>-6.<p>
+	   12. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para175">p. 61</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -215,7 +215,7 @@
        <td VALIGN=top><small><center><a name="p225">225</a></center><p>
 	   * see vol. 2, p. <a href="../V2/p236-269Ch11.html#p268">268</a>.<p>
 	   <hr>
-	   14. <i>Tablets of Bahá'u'lláh</i>, p. 69.<p>
+	   14. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para213">p. 69</a>.<p>
 	   15. Quoted by Lady Blomfield, <i>The Chosen Highway</i>, p. 184.
 	   <hr>
    	   [transmutation of elements]: <i>The Kitáb-i-Aqdas</i> <a href="../../../Baha/KA/p165-251Notes.html#note194">Note 194</a>; <i>The Kitáb-i-Íqán</i> <a href="../../../Baha/KI/p095-258.html#para64">p. 157</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../V1/p084-095Ch07.html#p86">p. 86</a>, vol. 2 <a href="../V2/p236-269Ch11.html#p268">p. 268</a>.<p>
@@ -223,13 +223,13 @@
 </tr>
 <tr>
        <td>
-	   <blockquote>O thou who hast turned thy gaze towards My face! In these days there occurred that which hath plunged Me into dire sadness. Certain wrong-doers who profess allegiance to the Cause of God committed such deeds as have caused the limbs of sincerity, of honesty, of justice, of equity to quake. One known individual to whom the utmost kindness and favour had been extended perpetrated such acts as have brought tears to the eye of God. Formerly We uttered words of warning and premonition, then for a number of years We kept the matter secret that haply he might take heed and repent. But all to no purpose. In the end he bent his energies upon vilifying the Cause of God before the eyes of all men. He tore the veil of fairness asunder and felt sympathy neither for himself nor for the Cause of God. Now, however, the deeds of certain individuals have brought sorrows far more grievous than those which the deeds of the former had caused. Beseech thou God, the True One, that He may graciously enable the heedless to retract and repent. Verily He is the Forgiving, the Bountiful, the Most Generous.</blockquote>
+	   <blockquote>O thou who hast turned thy gaze towards My face! In these days there occurred that which hath plunged Me into dire sadness. Certain wrong-doers who profess allegiance to the Cause of God committed such deeds as have caused the limbs of sincerity, of honesty, of justice, of equity to quake. One known individual to whom the utmost kindness and favour had been extended perpetrated such acts as have brought tears to the eye of God. Formerly We uttered words of warning and premonition, then for a number of years We kept the matter secret that haply he might take heed and repent. But all to no purpose. In the end he bent his energies upon vilifying the Cause of God before the eyes of all men. He tore the veil of fairness asunder and felt sympathy neither for himself nor for the Cause of God. Now, however, the deeds of certain individuals have brought sorrows far more grievous than those which the deeds of the former had caused. Beseech thou God, the True One, that He may graciously enable the heedless to retract and repent. Verily He is the Forgiving, the Bountiful, the Most Generous. <sup><small>16</small></sup></blockquote>
 	   The 'one known individual' mentioned above is a certain Muhammad-'Alíy-i-Isfahání, not to be confused with Siyyid Muhammad-i-Isfahání, the Anti-Christ of Bahá'u'lláh's Revelation. A brief account of this episode is given in <a href="p391-412Ch25.html#p395">Chapter 25</a>.<p>
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p226">226</a></center><p>
 	   <hr>
-	   16. <i>Tablets of Bahá'u'lláh</i>, pp. 59-60.
+	   16. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para171">pp. 59</a>-60.
 	   <p></small></td>
 </tr>
 </table>
