--- a/Baha'i/Others/ROB/V4/p391-412Ch25.html
+++ b/Baha'i/Others/ROB/V4/p391-412Ch25.html
@@ -182,7 +182,7 @@
 </tr>
 <tr>
        <td>
-	   newspaper <i>Akhtar</i> published in Constantinople. At some point he gained control of the newspaper and for several years published false and injurious statements about the Faith, its Author and the believers, such as the accusation against Afnán-i-Kabír described above (p. 396). This is the same newspaper mentioned by Bahá'u'lláh in <i>Epistle to the Son of the Wolf</i> (see above, p. 393). He refers again to this newspaper when he states:<p>
+	   newspaper <i>Akhtar</i> published in Constantinople. At some point he gained control of the newspaper and for several years published false and injurious statements about the Faith, its Author and the believers, such as the accusation against Afnán-i-Kabír described above (<a href="#p396">p. 396</a>). This is the same newspaper mentioned by Bahá'u'lláh in <i>Epistle to the Son of the Wolf</i> (see above, <a href="#p393">p. 393</a>). He refers again to this newspaper when he states:<p>
 	   <blockquote>...Briefly, they have incited a great many such as <i>Akhtar</i> and others, and are busying themselves in spreading calumnies. It is clear and evident that they will surround with their swords of hatred and their shafts of enmity the one whom they knew to be an outcast among men and to have been banished from one country to another. This is not the first time that such iniquity hath been perpetrated, nor the first goblet that hath been dshed to the ground, nor the first veil that hath been rent in twain in the path of God, the Lord of the worlds. This Wronged One, however, remained calm and silent in the Most Great Prison, busying Himself with His own affairs, and completely detached from all else but God. Iniquity waxed so grievous that the pens of the world are powerless to record it.<small><sup>12</sup></small></blockquote>
 	   Shaykh Ahmad and Mírzá Áqá Khán found another outlet in Constantinople to further their sinister designs. This was the Pan-Islámic movement led by Jamálu'd-Dín-i-Afghání, a deceitful person who was intent upon dethroning Násiri'd-Dín Sháh of Persia. Inwardly he was against the Bábís, but he was playing politics, and so the three men had no difficulty in pooling their talents and resources to make mischief everywhere. This union suited the two Azalís very well, because they too were pursuing the policy of overthrowing the government of Persia, which was the policy of Mírzá Yahyá and his supporters. The intrigues and conspiracies created by these three knew no bounds. Jamálu'd Dín wrote an account against the Faith in an Arabic encyclopaedia published in Beirut about which Bahá'u'lláh states in the <i>Lawh-i-Dunyá</i> that 'the well-informed and the learned were astonished'. Jamálu'd-Dín then went to Paris and published a newspaper by the name <i>'Urvatu'l-Vuthqá</i> (The Sure Handle).<p>
 	   </td>
@@ -190,6 +190,8 @@
        <td VALIGN=top><small><center><a name="p401">401</a></center><p>
 	   <hr>
 	   12. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para165">p. 108</a>.
+	   <hr>
+	   ["the well-informed..."] <a href="../../../Baha/TOB/p001-270TOB.html#para286"><i>Lawh-i-Dunyá</i></a>
 	   </small></td>
 </tr>
 <tr>
@@ -197,8 +199,8 @@
 	   Being a two-faced man, he used to send a copy to the Master on a weekly basis as a friendly gesture, and offered to publish any statement that the Master might wish to make, an offer which was totally ignored.<p>
 	   In 1896 one of Jamálu'd-Dín's supporters in Persia succeeded in assassinating Násiri'd-Dín Sháh. From then on events moved very fast. Three men, including Shaykh Ahmad and Mírzá Áqá Khán, were sent back to Persia by order of the Sultán of Turkey, and were mercilessly beheaded in Tabríz by order of the Crown Prince, Muhammad-'Alí Mírzá, for committing acts of treason against their country. Thus the machinations of the Azalís in Constantinople received their death blow. Jamálu'd-Dín escaped the net and died a year later.<p>
 	   <b>Hájí Mírzá Siyyid Hasan (Afnán-i-Kabír)</b><p>
-	   <blockquote>
 	   The sufferings and pain that this lengthy episode, stretching over almost a decade, inflicted upon Bahá'u'lláh is evident from the contents of many of His Tablets. For instance, the accusations against Afnán-i-Kabír described above are mentioned by Bahá'u'lláh in the following passages from <i>Epistle to the Son of the Wolf</i>:<p>
+	   <blockquote>
 	   ...In the Great City (Constantinople) they have roused a considerable number of people to oppose this Wronged One. Things have come to such a pass that the officials in that city have acted in a manner which hath brought shame to both the government and the people. A distinguished siyyid, whose well-known integrity, acceptable conduct, and commercial reputation, were recognized by the majority of fair-minded men, and who was regarded by all as a highly honored merchant, once visited Beirut. In view of his friendship for this Wronged One they telegraphed the Persian Dragoman informing him that this siyyid, assisted by his servant, had stolen a sum of money and other things and gone to 'Akká. Their design in this matter was to dishonor this Wronged One...This Wronged One, however, beseemeth the one true God to graciously assist every one in that which beseemeth these days.<small><sup>13</sup></small><p>
 	   </blockquote>
 	   </td>
@@ -245,7 +247,7 @@
        <td width="80%">
 	   And in another instance He states:<p>
 	   <blockquote>Moreover, many are now engaged in spreading lies and calumnies, and have no other intention than to instill distrust into the hearts and souls of men. As soon as some one leaveth the Great City (Constantinople) to visit this land, they at once telegraph and proclaim that he hath stolen money and fled to 'Akká. A highly accomplished, learned and distinguished man visited, in his declining years, the Holy Land, seeking peace and retirement, and about him they have written such things as have caused them who are devoted to God and are nigh unto Him to sigh.<small><sup>14</sup></small></blockquote>
-	   The 'distinguished Siyyid' and 'highly accomplished, learned and distinguished man' mentioned in these passages are both references to Hájí Mírzá Siyyid Hasan known as the Afnán-i-Kabír, a brother of the wife of the Báb. He was also a paternal cousin of the mother of the Báb. He was very much attracted to the person of the Báb, and became a believer in Yazd through the teaching efforts of Hájí Muhammad-Ibráhím, entitled by Bahá'u'lláh 'Muballigh' (Bahá'í teacher). It was to this teacher of the Cause that Bahá'u'lláh revealed the Tablet quoted in the Tablet of Ishráqát (<i>Tablets of Bahá'u'lláh</i>, pp. 117-19) and in the <i>Epistle to the Son of the Wolf</i>, pp. 131-4.<p>
+	   The 'distinguished Siyyid' and 'highly accomplished, learned and distinguished man' mentioned in these passages are both references to Hájí Mírzá Siyyid Hasan known as the Afnán-i-Kabír, a brother of the wife of the Báb. He was also a paternal cousin of the mother of the Báb. He was very much attracted to the person of the Báb, and became a believer in Yazd through the teaching efforts of Hájí Muhammad-Ibráhím, entitled by Bahá'u'lláh 'Muballigh' (Bahá'í teacher). It was to this teacher of the Cause that Bahá'u'lláh revealed the Tablet quoted in the Tablet of Ishráqát (<i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para294">pp. 117</a>-19) and in the <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#p131">pp. 131</a>-4.<p>
 	   Afnán-i-Kabír was a pillar of strength to his sister Khadíjih Bagum, the wife of the Báb, during her days of loneliness and bereavement. Later in life he rejoiced when one of his sons Siyyid 'Alí was given the honour of marrying Fúrúghíyyih, a daughter of Bahá'u'lláh. But he did not live to see the downfall of these two who became Covenant-breakers and perished spiritually.* The Afnán had a great love for Bahá'u'lláh and in the latter part of his life he was permitted to go to the Holy Land and spend the rest of his days there. He lived very close to the Mansion of Bahjí, and passed away about a year after the ascension of Bahá'u'lláh. 'Abdu'l-Bahá has paid tribute to him in <i>Memorials of the Faithful</i>. This is part of the short biography by the Master:<p>
 	   </td>
        <td></td>
@@ -366,8 +368,8 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p411">411</a></center><p>
-   	   * see <a href="p432-440Apndx_III.html">Appendix III</a>.<p>
-	   † see <a href="p432-440Apndx_III.html">Appendix III</a>.<p>
+   	   * see <a href="p432-440Apndx_III.html#135b">Appendix III</a>.<p>
+	   † see <a href="p432-440Apndx_III.html#17c">Appendix III</a>.<p>
 	   ‡ This short prayer is part of a special prayer in Islám, in which the Greatest Name (Bahá) is featured. For more details see vol. 1 , p. <a href="../V1/p105-152Ch09.html#p117">117</a>.<p>
 	   <hr>
 	   32. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para153">p. 96</a>.<p>
